@@ -1,7 +1,7 @@
 Source: apport
 Section: utils
 Priority: optional
-Build-Depends: debhelper (>= 5.0.37.2), python-support (>= 0.3), intltool
+Build-Depends: cdbs (>= 0.4.43), debhelper (>= 5.0.37.2), python-support (>= 0.3), intltool
 Maintainer: Martin Pitt <martin.pitt@ubuntu.com>
 Standards-Version: 3.7.2
 
